--- a/wwwroot/styles.css
+++ b/wwwroot/styles.css
@@ -14,6 +14,15 @@ body {
 }
 
 header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 200px;
+  background-image: url(/images/7g9tvL1.png);
+  background-size: cover;
+  background-position: center;
+  color: white;
 }
 
 main {
