fixed header image

--- a/wwwroot/styles.css
+++ b/wwwroot/styles.css
@@ -19,7 +19,7 @@ header {
   align-items: center;
   width: 100%;
   height: 200px;
-  background-image: url(/images/7g9tvL1.png);
+  background-image: url(../images/7g9tvL1.png);
   background-size: cover;
   background-position: center;
   color: white;
