--- a/wwwroot/styles.css
+++ b/wwwroot/styles.css
@@ -26,11 +26,20 @@ header {
 }
 
 main {
+  /*padding-top: 5em;
   display: flex;
-  flex-direction: row;
+  flex-flow: row wrap;
   justify-content: center;
-  flex-wrap: wrap;
   padding-bottom: 50px;
+  gap: 3rem;*/
+  display: grid;
+  justify-content: center;
+  grid-template-columns: repeat(2, 30em);
+  grid-auto-rows: 20em;
+  grid-template-areas:
+    'a b'
+    'a b';
+  gap: 2.5em;
 }
 
 footer {
@@ -44,8 +53,8 @@ footer {
 
 /* Boxes design*/
 .box {
-  width: 300px;
-  height: 350px;
+  /*width: 500px;
+  height: 350px;*/
   border: 1px solid black;
   border-radius: 10px;
   padding: 10px;
